--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,58 @@
  * limitations under the License.
  */
 
+plugins {
+    id "org.sonarqube" version "2.8"
+}
+
+apply plugin: "jacoco"
+apply plugin: "io.gitlab.arturbosch.detekt"
+
+jacoco {
+    toolVersion = "0.8.4"
+}
+
+sonarqube {
+    properties {
+        property("sonar.sources", "src/main")
+        property("sonar.tests", "src/test")
+        property("sonar.sourceEncoding", "UTF-8")
+        property("sonar.junit.reportPaths", "build/test-results/testDebugUnitTest")
+        property("sonar.java.coveragePlugin", "jacoco")
+        property("sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml")
+        property("sonar.kotlin.detekt.reportPaths", "build/reports/detekt/detekt.xml")
+        property("sonar.androidLint.reportPaths", "build/reports/lint-results-debug.xml")
+        property("sonar.scm.provider","git")
+    }
+}
+
+tasks.maybeCreate("sonarqube").configure {
+    dependsOn("jacocoTestReport")
+    dependsOn("detekt")
+    dependsOn("lintDebug")
+}
+
+task jacocoTestReport(type: JacocoReport) {
+    dependsOn "testDebugUnitTest"
+
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+
+    def fileFilter = ['**/R.class',
+                      '**/R$*.class',
+                      '**/BuildConfig.*',
+                      '**/Manifest*.*',
+                      '**/*Test*.*']
+    def debugTree = fileTree(dir: "${buildDir}/tmp/kotlin-classes/debug", excludes: fileFilter)
+    def mainSrc = "${project.projectDir}/src/main/java"
+
+    sourceDirectories.from = files([mainSrc])
+    classDirectories.from = files([debugTree])
+    executionData.from = fileTree(dir: "$buildDir", includes: ["jacoco/testDebugUnitTest.exec"])
+}
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
@@ -31,6 +83,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug {
+            testCoverageEnabled true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
