--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ buildscript {
         classpath deps.kotlin.plugin
         classpath deps.kotlin.allopen
         classpath deps.navigation.safe_args_plugin
+        classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.7.4"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
